<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:gravity="center|center_horizontal|center_vertical"
        android:hint="@string/please_enter_your_name"
        android:inputType="textPersonName"
        android:textColor="#736565"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#9E8A8A" />

    <Button
        android:id="@+id/btnAct2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="#DC2222"
        android:text="@string/acti2"
        android:textColor="#FFE504"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAct3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="#DC2222"
        android:text="@string/acti3"
        android:textColor="#FFE504"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvRes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:text="@string/data_from_activity_3_will_be_displayed_here" />

    <Button
        android:id="@+id/btnCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:background="#A6B2BC"
        android:text="Call"
        android:textColor="#250505"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnCallFriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:background="#A6B2BC"
        android:text="Call Friend"
        android:textColor="#250505"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:background="#A6B2BC"
        android:text="Open web"
        android:textColor="#250505"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:background="#A6B2BC"
        android:text="Open map"
        android:textColor="#250505"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnCam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:background="#BAAFAF"
        android:text="open Camera" />
</LinearLayout>